# rsgb

./: Cargo.toml  README.md
src/: cpu.rs  main.rs  mmu.rs  ppu.rs
src/display/: console.rs  mod.rs  pixel.rs
