[package]
name = "rusttest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "*"
enum-map-derive = "*"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.11"
clap = { version = "3.0.5", features = ["derive"] }